# leaderboard

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  update_dynamic.py
.github/workflows/: cd.yml  ci.yml  prod.yml
backend/: Dockerfile.dev  README.md  pyproject.toml
backend/app/: asgi.py  main.py
backend/app/api/: dependencies.py
backend/app/api/endpoints/: leaderboard.py  models.py  votes.py
backend/app/config/: base.py  hf_config.py
backend/app/core/: cache.py  fastapi_cache.py  formatting.py
backend/app/services/: hf_service.py  leaderboard.py  models.py  votes.py
backend/app/utils/: logging.py  model_validation.py
backend/utils/: analyze_prod_datasets.py  analyze_prod_models.py  fix_wrong_model_size.py  last_activity.py  sync_datasets_locally.py
frontend/: Dockerfile.dev  eslint.config.js  index.html  package.json  server.cjs  tsconfig.app.json  vite.config.js
frontend/public/: index.html  logo-lne.svgz
frontend/src/: App.js  App.jsx  i18n.tsx  index.css  main.jsx
frontend/src/components/Footer/: Footer.js  Footer.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/LanguageSelect/: LanguageSelect.jsx
frontend/src/components/Logo/: Logo.js
frontend/src/components/Navigation/: Navigation.js  Navigation.jsx  Navigation.tsx
frontend/src/components/shared/: AuthContainer.tsx  FilterTag.js  FilterTag.jsx  PageHeader.js
frontend/src/config/: auth.js  theme.js
frontend/src/pages/AboutPage/: AboutPage.tsx
frontend/src/pages/AddModelPage/: AddModelPage.tsx
frontend/src/pages/AddModelPage/components/EvaluationQueues/: EvaluationQueues.jsx
frontend/src/pages/AddModelPage/components/ModelSubmissionForm/: ModelSubmissionForm.js  ModelSubmissionForm.jsx
frontend/src/pages/AddModelPage/components/SubmissionGuide/: SubmissionGuide.jsx
frontend/src/pages/LeaderboardPage/: LeaderboardPage.js  LeaderboardPage.jsx  LeaderboardPage.tsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/: Leaderboard.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/ColumnSelector/: ColumnSelector.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/DisplayOptions/: DisplayOptions.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/Filters/: FilteredModelCount.js  Filters.js  QuickFilters.js  SearchBar.js  SearchBar.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/Filters/hooks/: useOfficialProvidersMode.js
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/Table/: Table.js  Table.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/Table/hooks/: useDataProcessing.js
frontend/src/pages/LeaderboardPage/components/Leaderboard/components/shared/: DropdownButton.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/constants/: defaults.js  defaults.tsx  modelTypes.js  quickFilters.js  tooltips.js  tooltips.jsx
frontend/src/pages/LeaderboardPage/components/Leaderboard/context/: LeaderboardContext.js
frontend/src/pages/LeaderboardPage/components/Leaderboard/hooks/: useDataUtils.js
frontend/src/pages/LeaderboardPage/components/Leaderboard/utils/: columnUtils.js  columnUtils.jsx
frontend/src/pages/QuotePage/: QuotePage.js  QuotePage.jsx
scripts/: create_request_file.py
src/: envs.py  populate.py
src/display/: about.py  css_html_js.py  formatting.py  utils.py
src/leaderboard/: filter_models.py  read_evals.py
src/pages/LeaderboardPage/components/Leaderboard/components/ColumnSelector/: ColumnSelector.js
src/scripts/: create_request_file.py  update_all_request_files.py
src/submission/: check_validity.py  submit.py
src/tools/: collections.py  model_backlinks.py  plots.py
src/voting/: vote_system.py
tests/submission/: test_user_submission_permission.py
