[project]
name = "open-llm-leaderboard"
version = "2.0"
description = ""
authors = []
readme = "README.md"
requires-python = "==3.12.1"

dependencies = [
    "apscheduler>=3.10.4",
    "black>=24.8.0",
    "click>=8.1.7",
    "datasets>=3.0.0",
    "huggingface-hub>=0.24.7",
    "pandas>=2.2.2",
    "python-dateutil>=2.9.0",
    "sentencepiece>=0.2.0",
    "transformers==4.45.1",
    "tokenizers>=0.19.0",
    "gradio-space-ci",
    "isort>=5.13.2",
    "ruff>=0.6.4",
    "gradio-leaderboard==0.0.12",
    "gradio[oauth]==4.44.1",
    "schedule>=1.2.2",
    "pigar>=2.1.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
ignore=["I","EM","FBT","TRY003","S101","D101","D102","D103","D104","D105","G004","D107","FA102"]
fixable=["ALL"]
select=["ALL"]

[tool.ruff.lint]
select = ["E", "F"]
fixable = ["ALL"]
ignore = ["E501"] # line too long (black is taking care of this)

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.uv.sources]
gradio-space-ci = { git = "https://huggingface.co/spaces/Wauplin/gradio-space-ci" }