[tool.poetry]
name = "llm-leaderboard-backend"
version = "0.1.0"
description = "Backend for the Open LLM Leaderboard"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
numpy = "1.24.3"
pandas = "^2.0.0"
datasets = "^2.0.0"
pyarrow = "^14.0.1"
python-multipart = "^0.0.6"
huggingface-hub = "^0.19.0"
transformers = "^4.35.0"
safetensors = "^0.4.0"
aiofiles = "^24.1.0"
fastapi-cache2 = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 